
- 100% test coverage, code refactoring #747, #749 (arkid15r)
- Support for Bosnia and Herzegovina #683, #725 (kasya, arkid15r)
- Support for Liechtenstein #650, #728, #758 (kasya, arkid15r)
- Added isort to pre-commit #722, #734 (arkid15r, dr-p)
- Get item multiple return type fix (dr-p) TODO: possible refactor required
- Sort overlapping holiday names #713 (kasya, arkid15r)
- Swaziland deprecation, replaced by Eswatini #721 (bkthomps)
- Singapore fixes #717, #726 (amas01, mborsetti)
- Canada fixes #715, #733 (bkthomps, MichaelThessel)
- Honduras fixes #720, #744 (bkthomps, arkid15r)
- Japan upgrades (added substitute holidays) #723 (shohirose)
- Malaysia fix #736 (shahonseven)
- Ukraine fixes #743, #746 (KJhellico)
- Bulgaria fixes #748 (KJhellico)

Version 0.16
============

Released September 16, 2022

This release is dedicated to Queen Elizabeth II (21 April 1926 – 8 September 2022),
who lived her long life as a monarch through 2 centuries, in both happy and difficult moments,
with grace, dignity and an always inspiring strong sense of duty and warm heart.
Goodbye "Lilibet", you have symbolically been a queen, a mother and a grandmother
to a lot of us, and will be dearly missed.

- Financial market support review, new method financial_holidays(..) #694 (dr-p)
- Support for Moldova #695 (Thedand)
- Support for Bolivia #679, #698 (kasya)
- UK updates #702 (JPunter, violuke)
- Australia updates #699 (Ryan-McCrory, dr-p)
- Canada updates #710 (bkthomps)
- New Zealand updates #708, #709 (dr-p, markhoneth)
- NYSE updates #693, #696 (kasya)

Version 0.15
============

Released August 21, 2022

- Added support for Python3.11 (dr-p)
- Updated README - improved badges area (dr-p)
- Support for Cuba #678 (bthompson, dr-p)
- Typechecking implementation, first release (HolidayBase, utils, some sample countries) #661 (dimbleby)
- Test coverage improvement #633 (akosfurton, dr-p)
- Drop support for UK subdivisions as countries (England, Scotland..) (dr-p)